allow OBR repository url to be native filesystem path
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@819896 13f79535-47bb-0310-9956-ffa450edef68