@@ -42,7 +42,8 @@ public class OBRRepositoryProvider implements IRepositoryProvider
 
         try
         {
-            URL repositoryURL = new URL(urlStr);
+            File urlFile = new File(urlStr);
+            URL repositoryURL = urlFile.exists() ? urlFile.toURL() : new URL(urlStr);
             File indexCache = new File(preferences.getProperty("index"));
             File localCache = new File(preferences.getProperty("cache"));
             String auth = preferences.getProperty("auth");
